tests/ui/option_where_plain.stderr
Error [E0112]: `show` wants Int (a whole number) for argument 1, but this is Int?
  --> tests/ui/option_where_plain.lex:7:10
    |
  7 |     show(x);
    |          ^
 Why: every argument must match its parameter's type
 Fix: use Int (a whole number) here
