tests/ui/option_where_plain.jet
fn show(n: Int) {
    print(n);
}

fn main() {
    val x: Int? = value(1);
    show(x);
}
